# epaper

./: .gitignore  Makefile  README.md  epaper.service  pyproject.toml  requirements.txt  run.py  waveshare_epd
epaper/: epd_helpers.py  image.py  log_config.py
epaper/components/: core.py  date.py  debugging.py  fonts.py  network.py  shapes.py  sunlight.py  text.py  time.py  weather.py
epaper/data/: file_descriptors.py  location.py  network.py  sunlight.py  weather.py
epaper/display/: helpers.py  mock.py  protocol.py  resets.py  wrapper.py
epaper/drawing/: arrow.py  colors.py  components.py
epaper/drawing/images/: burn_in.py  epaper.py
epaper/utils/: angles.py  async_wrapper.py  decorators.py  time_formatting.py  wind.py  wind_direction_constants.py
tests/epaper_test/components_test/: core_test.py
tests/epaper_test/display_test/: wrapper_test.py
tests/epaper_test/drawing_test/: components_test.py
tests/epaper_test/utils_test/: angles_test.py  async_helpers_test.py  time_formatting_test.py  wind_test.py
