[project]
name = "epaper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["click>=8.3.3", "pillow>=12.2.0"]

[dependency-groups]
dev = ["black>=26.3.1", "mypy>=1.20.2", "pytest>=9.0.3", "pytest-cov>=7.1.0"]

[tool.pytest.ini_options]
addopts = "--cov=epaper --cov-report=html"
